# open-lds

./: .gitmodules  README.md
legacy/: .gitignore  .gitmodules  README.md  dfclient-autorun-setup.sh  dfclient.service  generate-eclipse-project.sh  install-dfclient.sh  install-processing.sh  prepare-archlinux.sh  remove-dfclient.sh  total-dfclient-install.sh
legacy/conky/: .conkyrc  install-config.sh
legacy/cpp-sources/: CMakeLists.txt  build-driver.sh  build-ldf-software.sh  complete-build.sh  lightning-detection-system.doxyfile
legacy/cpp-sources/cmake/: EnablePthreads.cmake
legacy/cpp-sources/dfclient/: CMakeLists.txt  cronjob  dfclient.conf  experiment_continue.sh  experiment_start.sh  push_data.sh  rsync_dfclient_dir.sh
legacy/cpp-sources/dfclient/include/: boltek-hw-simulator.hpp  boltek-hw.hpp  data-collector.hpp  dfclient-system.hpp  hardware-interface.hpp  health-monitor.hpp  importer.hpp  output-manager.hpp  output-provider-interface.hpp  output-provider-mysql.hpp  output-provider-serializer.hpp  receiver-controller.hpp  strike-data-container-boltek.hpp  strike-data-container-interface.hpp  utils.hpp
legacy/cpp-sources/dfclient/src/: boltek-hw-simulator.cpp  boltek-hw.cpp  data-collector.cpp  dfclient-system.cpp  hardware-interface.cpp  health-monitor.cpp  importer.cpp  main.cpp  output-provider-interface.cpp  output-provider-mysql.cpp  output-provider-serializer.cpp  receiver-controller.cpp  strike-data-container-boltek.cpp  utils.cpp
legacy/cpp-sources/driver/src/: boltek.c
legacy/cpp-sources/gtkmathtest/: gtkmathtest.cpp  gui.cpp  gui.hpp
legacy/cpp-sources/libboltek/: .gitignore  CMakeLists.txt  Doxyfile.en  Doxyfile.ru  libboltek.c  stormpci.h
legacy/cpp-sources/libdfmath/: CMakeLists.txt  corellation.cpp  corellation.hpp  detection-testing.cpp  detection-testing.hpp  df-math.conf  dfmath.cpp  dfmath.hpp  lightning-positioning-result.cpp  lightning-positioning-result.hpp  strike-data.cpp  strike-data.hpp  strike-modifiers.cpp  strike-modifiers.hpp  strikes-group-solver-variational.cpp  strikes-group-solver-variational.hpp  strikes-group-solvers.cpp  strikes-group-solvers.hpp  strikes-group.cpp  strikes-group.hpp
legacy/cpp-sources/libdfmath/tests/: test0.conf
legacy/cpp-sources/mathtest/: CMakeLists.txt  mathtest.cpp
legacy/cpp-sources/mathtest/scripts/: clasterisation.sh  detection-func.plt  find-direction-and-plot-fields.sh  generate-random-case  move-all-with-custiom-query.sh  move-to-unified-base.sh  plot-detection-func.sh
legacy/cpp-sources/strikesproc/: CMakeLists.txt  strikes-proc.conf  strikes-proc.cpp
legacy/cpp-sources/strikesprocd/: CMakeLists.txt  solver-queue.hpp  strike-proc-d.conf  strikes-processing-deamon.cpp  strikes-processor.cpp  strikes-processor.hpp
legacy/cpp-sources/strikesstatd/: CMakeLists.txt  configurator.cpp  configurator.hpp  state-restorer.hpp  stats-calculator.cpp  stats-calculator.hpp  strikesstatd.conf  strikesstatd.cpp
legacy/cpp-sources/unit-tests/: CMakeLists.txt
legacy/cpp-sources/unit-tests/libdfmath/: CMakeLists.txt  positioning-test.cpp  time-shift-test.cpp
legacy/cpp-sources/unit-tests/utils/: CMakeLists.txt
legacy/cpp-sources/unit-tests/utils/math-utils/: CMakeLists.txt  clasterisation-solver-test.cpp  gradient-solver-test.cpp  linear-algebra-test.cpp
legacy/cpp-sources/unit-tests/utils/mysql/: CMakeLists.txt  insert-generator-tests.cpp
legacy/cpp-sources/unit-tests/utils/positioning/: CMakeLists.txt  positioning-tests.cpp
legacy/cpp-sources/utils/: CMakeLists.txt  exceptions.hpp  macros.hpp  table-index-mapping.hpp
legacy/cpp-sources/utils/configuration/: CMakeLists.txt  configurator.cpp  configurator.hpp
legacy/cpp-sources/utils/constants/: CMakeLists.txt  constants.cpp  constants.hpp
legacy/cpp-sources/utils/math-utils/: CMakeLists.txt  clasterization-problem-solver-compact-quick.hpp  clasterization-problem-solver-compact.hpp  clasterization-problem-solver-interface.hpp  clasterization-problem-solver.hpp  gradient-descent-solver.cpp  gradient-descent-solver.hpp  linear-algebra.cpp  linear-algebra.hpp  math-basics.cpp  math-basics.hpp  math-utils.cpp  math-utils.hpp  min-max-finder.hpp  random.cpp  random.hpp
legacy/cpp-sources/utils/mysql/: CMakeLists.txt  MysqlWrapper.cpp  MysqlWrapper.hpp
legacy/cpp-sources/utils/positioning/: CMakeLists.txt  positioning.cpp  positioning.hpp
legacy/cpp-sources/utils/system/: CMakeLists.txt  system-utils.cpp  system-utils.hpp
legacy/cpp-sources/utils/timestamp/: CMakeLists.txt  timestamp-utils.cpp  timestamp-utils.hpp
legacy/database/: drop-database.sql  drop-tables.sql  get-devices-and-experiments-tables.sh  quick-clear-strike-proc-tables.sh  quick-updb-test-processing.sh  up-boltek-raw-client.sql  up-boltek-raw-server.sql  up-dev-exp-tables.sql  up-unified-table.sql  updb.py  updb.sh
legacy/database/dbcreator/: mysqlutils.py  tablesCreator.py  updb-new.py  updb.py  users.yaml
legacy/installers/: install-processing-deamon-config.sh  install-processing-deamon.sh
legacy/python-processing/: deduplicate.py  extract-solutions.py  import-msk-data.py  intensity_calculator.py  loadout.py  process-loadout.py  process_csv.py  run_functional_tests.py  run_unit_tests.py  server.yaml  stroke_rep_detector.py  test_shared_strikes.py
legacy/python-processing/ldfutils/: connection.py  dbloader.py  dbtypes.py  dbwriter.py  pos_time.py  solutions_processing.py  utils.py
legacy/python-processing/ldfutils_functional_tests/: test_solution_loading.py
legacy/python-processing/ldfutils_unit_tests/: test_connection_settings.yaml  test_connection_utils.py  test_dbtypes.py  test_lightning_mark.py  test_pos_time.py
legacy/tools/dbmonitor/: db.conf.sample  dbmonitor.py
legacy/tools/delete-duplicates/: deduplicate.py
legacy/tools/idog/: idog_asus.py
legacy/tools/plot-fields/: db.yaml  db_config.py  plot_fields.py
legacy/tools/web-diag/: index.html  install.sh
legacy/tools/wwlln-adding-to-db/: import-wwlln-to-db.py  up-wwlln-table.sh  wwlln-solutions.sql
legacy/tools/wwlln-validation/: README.txt  test-shift.sh  utils.py  validate.py
(+2 files in other folders)
