cmake_minimum_required(VERSION 3.1)

project(utils)

add_subdirectory(boost-log-configurator)
add_subdirectory(constants)
add_subdirectory(math-utils)
add_subdirectory(timestamp)
add_subdirectory(positioning)
add_subdirectory(mysql)
add_subdirectory(light-serializer)
add_subdirectory(system)
add_subdirectory(configuration)
